--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FilumDLWPF"
         mc:Ignorable="d"
-        Title="Filum-DL Application v1.0.5 - The ultimate downloader for your needs!" Height="450" Width="800" ResizeMode="NoResize"
+        Title="Filum-DL Application v1.1.0 - The ultimate downloader for your needs!" Height="450" Width="800" ResizeMode="NoResize"
         Icon="/LogoSummer.ico"
         Background="Aqua"
         
@@ -38,6 +38,8 @@
             <ComboBoxItem Content="480p" IsEnabled="True" />
             <ComboBoxItem Content="720p" IsEnabled="True" />
             <ComboBoxItem Content="1080p" IsEnabled="True" />
+            <ComboBoxItem Content="1440p" IsEnabled="True" />
+            <ComboBoxItem Content="2160p" IsEnabled="True" />
             <ComboBoxItem Content="Highest Video Quality" IsEnabled="True" />
         </ComboBox>
         <Label Content="Status Bar:" Name="statusBarLabel" HorizontalAlignment="Left" FontSize="15px"  Margin="38,359,0,0" VerticalAlignment="Top" Width="121"/>
