--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FilumDLWPF"
         mc:Ignorable="d"
-        Title="Filum-DL Application v1.1.5 - The ultimate downloader for your needs!" Height="450" Width="800" ResizeMode="NoResize"
+        Title="Filum-DL Application v1.2.0 - The ultimate downloader for your needs!" Height="450" Width="800" ResizeMode="NoResize"
         Icon="/LogoSummer.ico"
         Background="Aqua"
         
@@ -18,16 +18,17 @@
         </Grid.RowDefinitions>
         <Label Content="Filum-DL" HorizontalContentAlignment="Center" Foreground="Black" Background="Aqua" HorizontalAlignment="Left" FontSize="20px" Margin="339,0,0,339" VerticalAlignment="Bottom" Height="41" Width="146" RenderTransformOrigin="0.527,0.589"/>
         <Label Content="Download Platform: " FontSize="15px" HorizontalAlignment="Left" Margin="5,81,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.468,-0.448" Height="51" Width="154"/>
-        <ComboBox Margin="150,79,136,297" Name="dnPlatform" Uid="dnPlatform">
+        <ComboBox Margin="150,79,136,297" Name="dnPlatform" Uid="dnPlatform" SelectionChanged="dnPlatform_SelectionChanged">
             <ComboBoxItem Content="Choose the download platform..." IsEnabled="False" IsSelected="True"/>
-            <ComboBoxItem Content="YouTube" IsEnabled="True" Selected="ListBoxYT_Selected" />
-
+            <ComboBoxItem Content="YouTube" IsEnabled="True" Name="YouTube"  />
+            <ComboBoxItem Content="Twitter" IsEnabled="True" Name="Twitter"  />
         </ComboBox>
         <Label Content="Download Type: " Visibility="Hidden" Name="dnTypeLabel" FontSize="15px" HorizontalAlignment="Left" Margin="28,134,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.468,-0.448" Height="51" Width="154"/>
-        <ComboBox Margin="152,132,136,242" Visibility="Hidden" Name="dnType" Uid="dnType">
+        <ComboBox Margin="152,132,136,242" Visibility="Hidden" Name="dnType" SelectionChanged="dnType_SelectionChanged" Uid="dnType">
             <ComboBoxItem Content="Choose the download type..." IsEnabled="False" IsSelected="True" />
-            <ComboBoxItem Content="Video" IsEnabled="True" Selected="ListBoxVideo_Selected" Name="Video" />
-            <ComboBoxItem Content="Playlist" IsEnabled="True" Selected="ListBoxPlaylist_Selected" Name="Playlist" />
+            <ComboBoxItem Content="Video" IsEnabled="True" Name="Video" />
+            <ComboBoxItem Content="Playlist" IsEnabled="True" Name="Playlist" />
+            <ComboBoxItem Content="Image" IsEnabled="True" Name="Image" />
         </ComboBox>
         <Label Content="Selection URL:" Name="dnURILabel"  Visibility="Hidden" FontSize="15px" Margin="33,186,692,0" VerticalAlignment="Top" RenderTransformOrigin="0.468,-0.448" Height="51"/>
         <TextBox HorizontalAlignment="Left" TextChanged="dnURI_TextChanged" Visibility="Hidden"  TextAlignment="Justify" Margin="151,0,0,186" Name="dnURI" TextWrapping="Wrap" Width="574" Height="42" VerticalAlignment="Bottom"/>
@@ -36,17 +37,20 @@
         <CheckBox Content="Do you want to download selection captions too?" Visibility="Hidden"  Name="dnCC" FontSize="15px" HorizontalAlignment="Left" Margin="195,323,0,0" VerticalAlignment="Top"/>
         <Button Content="Download" FontSize="18px" Name="dnButton" Visibility="Hidden"   Click="dnButton_Click" HorizontalAlignment="Left" Margin="244,346,0,0" VerticalAlignment="Top" Height="47" Width="264"/>
         <Label Content="Download Resolution:" Name="dnResLabel" Visibility="Hidden"   FontSize="15px" HorizontalAlignment="Left" Margin="1,235,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.468,-0.448" Height="51" Width="154"/>
-        <ComboBox Margin="153,234,133,141" Name="dnRes" Visibility="Hidden">
+        <ComboBox Margin="153,234,133,141" Name="dnRes" Visibility="Hidden" SelectionChanged="dnRes_SelectionChanged">
             <ComboBoxItem Content="Choose the download resolution..." IsEnabled="False" IsSelected="True" Name="dnResDef"/>
-            <ComboBoxItem Content="144p"  IsEnabled="True" />
-            <ComboBoxItem Content="240p" IsEnabled="True" />
-            <ComboBoxItem Content="360p" IsEnabled="True" />
-            <ComboBoxItem Content="480p" IsEnabled="True" />
-            <ComboBoxItem Content="720p" IsEnabled="True" />
-            <ComboBoxItem Content="1080p" IsEnabled="True" />
-            <ComboBoxItem Content="1440p" IsEnabled="True" />
-            <ComboBoxItem Content="2160p" IsEnabled="True" />
-            <ComboBoxItem Content="Highest Video Quality" IsEnabled="True" />
+            <ComboBoxItem Content="144p"  IsEnabled="True" Name="p144" />
+            <ComboBoxItem Content="240p" IsEnabled="True" Name="p240" />
+            <ComboBoxItem Content="360p" IsEnabled="True" Name="p360" />
+            <ComboBoxItem Content="480p" IsEnabled="True" Name="p480" />
+            <ComboBoxItem Content="720p" IsEnabled="True" Name="p720" />
+            <ComboBoxItem Content="1080p" IsEnabled="True" Name="p1080" />
+            <ComboBoxItem Content="1440p" IsEnabled="True" Name="p1440" />
+            <ComboBoxItem Content="2160p" IsEnabled="True" Name="p2160" />
+            <ComboBoxItem Content="Bitrate: 2176000" IsEnabled="True" Name="bit2176000" />
+            <ComboBoxItem Content="Bitrate: 950000" IsEnabled="True" Name="bit950000" />
+            <ComboBoxItem Content="Bitrate: 632000" IsEnabled="True" Name="bit632000" />
+            <ComboBoxItem Content="Highest Video Quality" Name="MaxQuality" IsEnabled="True" />
         </ComboBox>
         <Label Content="Status Bar:" Name="statusBarLabel" HorizontalAlignment="Left" FontSize="15px"  Margin="38,372,0,0" VerticalAlignment="Top" Width="121"/>
         <TextBox HorizontalAlignment="Left" Name="statusBar" Height="47" Margin="41,401,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="726" Grid.RowSpan="2"/>
