--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FilumDLWPF"
         mc:Ignorable="d"
-        Title="Filum-DL Application v1.4.0 - The ultimate downloader for your needs!" Height="450" Width="800" ResizeMode="NoResize"
+        Title="Filum-DL Application v1.4.5 - The ultimate downloader for your needs!" Height="459" Width="800" ResizeMode="NoResize"
         Icon="/LogoSummer.ico"
         Background="Aqua"
         >
     <Grid Margin="0,-32,-60,0">
         <Grid.RowDefinitions>
-            <RowDefinition Height="429*"/>
-            <RowDefinition Height="31*"/>
+            <RowDefinition Height="460*"/>
+            <RowDefinition Height="9*"/>
             <RowDefinition Height="6*"/>
         </Grid.RowDefinitions>
         <ComboBox HorizontalAlignment="Left" Visibility="Visible" FontSize="20px" Margin="106,213,0,0" Name="exType" VerticalAlignment="Top" Width="571" RenderTransformOrigin="0.577,-0.89" Height="56" >
@@ -23,6 +23,9 @@
         <Label Content="Media Platform&#xD;&#xA;" HorizontalAlignment="Left" FontSize="30px" Margin="250,145,0,0" VerticalAlignment="Top" Height="96" Width="298"/>
         <Button Content="Begin" Visibility="Hidden" HorizontalAlignment="Left" Click="exBtn_Click" FontSize="25px" Name="exBtn" Margin="272,294,0,0" VerticalAlignment="Top" Height="65" Width="224"/>
         <Label Content="Filum-DL " FontSize="60px" HorizontalAlignment="Left" Margin="228,60,0,0" VerticalAlignment="Top" FontWeight="Bold" Height="78" Width="370" RenderTransformOrigin="0.482,0.521"/>
+        <Button Content="Know About The Developer!" Name="DevBtn" Click="DevBtn_Click" FontSize="20px" HorizontalAlignment="Left" Margin="391,378,0,0" VerticalAlignment="Top" Width="382" RenderTransformOrigin="0.504,0.385" Height="57"/>
+        <Button Content="Check Out Our Website!" Name="WebBtn" Click="WebBtn_Click" FontSize="20px" HorizontalAlignment="Left" Margin="14,378,0,0" VerticalAlignment="Top" Width="363" RenderTransformOrigin="0.504,0.385" Height="57"/>
+        <Button Content="?" Name="Surprise" Click="Surprise_Click" FontSize="20px" FontWeight="Bold" HorizontalAlignment="Left" Height="30" Margin="734,46,0,0" VerticalAlignment="Top" Width="35"/>
 
     </Grid>
 </Window>
